[package]
name = "student-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.3.1"
solana-program = "1.18.2"
spl-associated-token-account = { version = "2.3.1", features = [ "no-entrypoint" ] }
spl-token = { version= "4.0.1", features = [ "no-entrypoint" ] }
thiserror = "1.0.57"

[lib]
crate-type = ["cdylib", "lib"]
